<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AnyType" Id="{5a7ba9f2-4a1b-41fd-97b7-9473bce2a8f4}">
    <Declaration><![CDATA[TYPE ST_AnyType :
STRUCT
	pValue : PVOID;
	nSize  : DINT;
	TypeClass : __SYSTEM.TYPE_CLASS;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>