<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_AnyBytes" Id="{2908adf1-cbe3-4cd7-bf09-372ce3156095}">
    <Declaration><![CDATA[TYPE T_AnyBytes : __SYSTEM.AnyType; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>